app/css/main.less
// mixins

.roboto() {
    font-family: 'Roboto', sans-serif;
}

.roboto-condensed() {
    font-family: 'Roboto Condensed', sans-serif;
}

.unselectable() {
    -webkit-user-select: none;
    user-select: none;
}

// global config

body {
    margin: 0;
}

// singleton elements

@title-height: 20px;
#title {
    .roboto-condensed();
    .unselectable();

    .unfocused & {
        color: #999;
    }

    @bg: #f0f0f0;

    height: @title-height;
    text-align: right;
    background: @bg;
    border-bottom: 1px solid darken(@bg, 10%);
    padding: 10px 12px;
    margin: 0;

    position: fixed;
    left: 0;
    top: 0;
    right: 0;
}

#app-container {
    .roboto();
    
    position: absolute;
    top: (@title-height + 20px);
    left: 0;
    right: 0;
    bottom: 0;
    overflow-y: scroll;

    padding-top: 8px;
}

#loading {
    text-align: center;
}

//
// Friends list
//

ul#conversations {
    @avatar-size: 32px;

    margin: 0;
    padding: 0;

    .conversation {
        .unselectable();
        cursor: pointer;

        list-style: none;
        margin: 0;
        padding: 0.5em 8px;

        &.unread {
            font-weight: bold;

            .preview {
                color: #555;
            }
        }

        .avatar {
            width: @avatar-size;
            height: @avatar-size;
            float: left;
            vertical-align: middle;
            border-radius: @avatar-size / 2;
            margin-right: 8px;

        }

        div.avatar {
            background-color: #999;
            color: #fff;
            font-size: 10pt;
            line-height: @avatar-size;
            text-align: center;
            vertical-align: middle;
        }

        .name {
            font-size: 12pt; 
        }

        .preview {
            font-size: 10pt;
            color: #999;
            height: 1.2em;
            overflow: hidden;
        }

        &:hover {
            background-color: #ddd;
        }
    }

}

//
// Conversation/chat list
//
#conversation {
    @composer-inner-height: 16pt;
    @composer-font-size: 12pt;
    @composer-padding: 6pt;
    @composer-height: (@composer-inner-height + 2 * @composer-padding);
    @message-margin: 12pt;
    @message-separation: 5pt;

    #events-container {
        display: block;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: @composer-height;
        overflow-y: scroll;

        margin: 0;
        padding: 0;
    }

    ul#events {

        margin: 0;
        // margin: 0 0 @message-separation 0;
        // padding: 0;
        padding: @message-separation 0 0 0;

        .event {
            margin-bottom: @message-separation;

            list-style: none;
            overflow: hidden;
            display: block;

            &.hangout {
                .roboto-condensed();

                background-color: #f8f8f8;
                font-size: 10pt;
                text-align: center;
                margin: @message-margin 0;
                padding: (@message-margin / 2) @message-margin;
            }

            &.incoming {
                .event-item {
                    background-color: #f0f0f0;
                }
                margin-right: @message-margin;
                margin-left: (@message-margin / 4);
                text-align: left;
            }

            &.outgoing {
                .event-item {
                    background-color: #ddd;
                }
                &.pending .event-item {
                    background-color: #f0f0f0;
                    color: #777;
                }
                margin-left: @message-margin;
                margin-right: (@message-margin / 4);
                text-align: right;
            }

            .event-item {
                display: inline-block;

                border-radius: 8px;
                padding: 8px;

                .segment {
                    // handle long urls
                    overflow-wrap: break-word;
                    word-wrap: break-word;
                    word-break: break-word;
                    hyphens: auto;
                    font-size: 11pt;
                }

                a.link {
                    color: #6893d8;
                    text-decoration: none;

                    &:hover {
                        text-decoration: underline;
                    }
                }
            }
        }
    }

    #composer {
        @input-color: #111;
        @bg: #f0f0f0;

        position: fixed;
        bottom: 0;
        left: 0;
        right: 0;
        background-color: @bg;
        border-top: 1px solid darken(@bg, 10%);

        .input {
            font-size: @composer-font-size;
            min-height: @composer-inner-height;
            padding: @composer-padding;
            width: 100%;

            color: @input-color;

            // support the placeholder element
            &:empty:before {
                content: attr(placeholder);
                color: lighten(@input-color, 50%);
            }

            // remove the ugly outline on osx
            &:focus {
                outline: none;
            }
        }
    }
}


//
// Loading spinner 
// 
@loader-color: #333;
@loader-size: 5em;
@loader-width: 0.55em;
.loader {
    @faded-color: rgba(red(@loader-color), green(@loader-color), blue(@loader-color), 0.2);
    margin: 25px auto;
    font-size: 10px;
    position: relative;
    text-indent: -9999em;
    border-top: @loader-width solid @faded-color;
    border-right: @loader-width solid @faded-color;
    border-bottom: @loader-width solid @faded-color;
    border-left: @loader-width solid @loader-color;
    transform: translateZ(0);
    animation: load8 1.1s infinite linear;
}
.loader,
.loader:after {
    border-radius: 50%;
    width: @loader-size;
    height: @loader-size;
}
@keyframes load8 {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

